# obconf-qt

./: .gitignore  AUTHORS  CHANGELOG  CMakeLists.txt  README  README.md  obconf-qt.kdev4  obconf-qt.ts  obconf-qt_ca.ts  obconf-qt_cs.desktop  obconf-qt_cs.ts  obconf-qt_da.ts  obconf-qt_de.ts  obconf-qt_el.ts  obconf-qt_es.ts  obconf-qt_fr.ts  obconf-qt_gl.ts  obconf-qt_hr.ts  obconf-qt_hu.ts  obconf-qt_id.ts  obconf-qt_is.ts  obconf-qt_it.ts  obconf-qt_ja.ts  obconf-qt_lt.ts  obconf-qt_nl.ts  obconf-qt_pa.ts  obconf-qt_pl.ts  obconf-qt_pt.ts  obconf-qt_pt_BR.ts  obconf-qt_ru.ts  obconf-qt_ru_RU.ts  obconf-qt_sv.ts  obconf-qt_tr.ts  obconf-qt_uk.ts  obconf-qt_zh_CN.ts
.github/: ISSUE_TEMPLATE.md
.kdev4/: lxinput-qt.kdev4  obconf-qt.kdev4
data/: obconf-qt.desktop.in  obconf-qt.desktop.in~
debian/: changelog  control  rules
src/: CMakeLists.txt  about.c  appearance.c  appearance.cpp  appearance.h  archive.cpp  desktops.c  desktops.cpp  desktops.h  dock.c  dock.cpp  dock.h  main.c  main.h  maindialog.cpp  maindialog.h  margins.c  margins.cpp  margins.h  mouse.c  mouse.cpp  mouse.h  moveresize.c  moveresize.cpp  moveresize.h  obconf-qt.cpp  obconf-qt.desktop.in  obconf-qt.h  obconf.ui  preview.cpp  preview.h  preview_update.h  strings.c  theme.c  theme.cpp  theme.h  tree.c  tree.cpp  windows.c  windows.cpp  (+1 more)
src/translations/: es.ts  gl.ts  hr.ts  id.ts  is.ts  ja.ts  obconf-qt.desktop.yaml  obconf-qt.ts  obconf-qt_ar.desktop.yaml  obconf-qt_ar.ts  obconf-qt_arn.ts  obconf-qt_ast.ts  obconf-qt_bg.desktop.yaml  obconf-qt_bg.ts  obconf-qt_ca.desktop.yaml  obconf-qt_ca.ts  obconf-qt_cs.desktop.yaml  obconf-qt_cs.ts  obconf-qt_cy.ts  obconf-qt_da.desktop.yaml  obconf-qt_da.ts  obconf-qt_de.desktop  obconf-qt_de.desktop.yaml  obconf-qt_de.ts  obconf-qt_el.desktop.yaml  obconf-qt_el.ts  obconf-qt_en_GB.ts  obconf-qt_es.desktop.yaml  obconf-qt_es.ts  obconf-qt_et.desktop.yaml  obconf-qt_et.ts  obconf-qt_eu.desktop.yaml  obconf-qt_eu.ts  obconf-qt_fi.desktop.yaml  obconf-qt_fi.ts  obconf-qt_fr.desktop  obconf-qt_fr.desktop.yaml  obconf-qt_fr.ts  obconf-qt_gl.desktop.yaml  obconf-qt_gl.ts  (+69 more)
